[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["stendler <git@stendler.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
numpy = "^1.24.1"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
